style.css
/* ... */
.disaster-response a:hover {
	color:#fff;
}

/* ---- Give Now Styles ----*/
.sidebar .widget.give {
	background-color:#fff;
	border-bottom:none;
}

a.giveNow {
	background:#f58632;
	border-radius:3px;
	color:#fff;
	display:block;
	padding:16px;
	padding:1rem;
	width:100%;
	text-align:center;
}

a.giveNow:hover {
	color:#fff;
}

/* ---- Fields, Inputs, Buttons etc. ---- */
.buttons {
	margin: 50px 0;
}

.button-set {
	display: inline !important;
}

.button-set {
	margin-right: 5%;
}

.search input[type="text"] {
	height:auto;
	line-height:1.5;
	margin:0;
}

/* ---- Gallery Styles ---- */
.childTheme .wp-caption .wp-caption-text,
.childTheme .gallery-caption,
.childTheme .entry-caption {
	text-align: left;
	font-style: normal;
	font-size: 12px;
	line-height: 1.5;
	color: #111;
}

.childTheme .gallery .gallery-icon img {
	height: auto;
	max-width: 100%;
	padding: 0 !important;
	border: 0 !important;
}

/* ---- Responsive Styles ---- */
@media screen and (max-width:720px) {
	.mobile-display {
		display:block!important;
	}
}

@media screen and (max-width:480px) {
	.allContent {
		margin-top:1em;
		margin-right:1em;
		margin-left:1em;
	}
	
	.category .categoryName,.search .mainContent h2.search-title {
		border-bottom:none;
		color:#666;
		font-size:1.5em;
	}
	
	.hasSidebar .mainContent {
		padding:0;
		width:100%;
	}
	
	.sidebar {
		width:100%;
	}
	
	.childTheme.page-home .flexItem:nth-of-type(n) {
		border:none;
		padding:0;
	}
	
	.no-js .childTheme.page-home .flexContainer,.no-js .childTheme.page-home .flexItem,.no-flexbox .childTheme.page-home .flexContainer,.no-flexbox .childTheme.page-home .flexItem {
		display:block;
		float:none;
		width:100%;
	}
	
		/* ---- Gallery Styles ---- */
		/* NOTE: images should be - at least - 350px in width for best resolution. */
	.childTheme .gallery .gallery-item {
		width: 100% !important;
	}
	
		/* ---- Button (group) Styles ---- */
	.button-set {
		display: block !important;
	}
}

